# routes/Api/BranchOfficeApi.php
@@ -12,5 +12,5 @@ Route::group(["middleware" => ["auth:sanctum"]], function () {
     Route::put('branchoffice/{id}', [BranchInfoController::class, 'put']);
     Route::delete('branchoffice/{id}', [BranchInfoController::class, 'destroy']);
 
-    Route::get('getdata-branchoffice', [BranchInfoController::class, 'getBranchInfo']);
+    Route::post('getdata-branchoffice', [BranchInfoController::class, 'getBranchInfo']);
 });
